src/objects/UniqueEntry__Matching_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>UniqueEntry__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RingLead Configuration</label>
        <referenceTo>UniqueEntry__RingLead_Configuration__c</referenceTo>
        <relationshipLabel>Matching Criterias</relationshipLabel>
        <relationshipName>Matching_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Filter_Type_2__c</fullName>
        <label>Filter Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Filter_Type__c</fullName>
        <label>Filter Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Filter_Value_2__c</fullName>
        <label>Filter Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Operator__c</fullName>
        <label>Operator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Matching Criteria</label>
    <listViews>
        <fullName>UniqueEntry__All</fullName>
        <columns>NAME</columns>
        <columns>UniqueEntry__Order__c</columns>
        <columns>UniqueEntry__Operator__c</columns>
        <columns>UniqueEntry__Filter_Type_2__c</columns>
        <columns>UniqueEntry__Filter_Type__c</columns>
        <columns>UniqueEntry__Filter_Value_2__c</columns>
        <columns>UniqueEntry__Field_Value__c</columns>
        <columns>UniqueEntry__Field_Name__c</columns>
        <columns>UniqueEntry__Configuration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Matching Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>